--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
         <title>
             Parveen kaur Weather app
             </title>
+           <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+        
+            <!-- Latest compiled and minified CSS -->
+   
 
-        <script>
-            
-        </script>
+          <!-- jQuery library -->
+         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+            <!-- Latest compiled JavaScript -->
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+                    </script>
     </head>
     <body>
 
