--- a/index.html
+++ b/index.html
@@ -3,19 +3,24 @@
         <title>
             Parveen kaur Weather app
             </title>
+             <!-- Latest compiled and minified CSS -->
+   
            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
         
-            <!-- Latest compiled and minified CSS -->
-   
 
-          <!-- jQuery library -->
-         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+            <!-- jQuery library -->
+           <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
             <!-- Latest compiled JavaScript -->
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
                     </script>
     </head>
     <body>
+     <nav class ="navbar navbar-default">
+         <div class="container">
+             
+         </div>
 
+     </nav>
     </body>
 </html>
