--- a/index.html
+++ b/index.html
@@ -18,7 +18,19 @@
     <body>
      <nav class ="navbar navbar-default">
          <div class="container">
-             
+             <div class="navbar-header">
+                 <a href="" class ="navbar-brand navbar-link">
+                     <img src="" alt=""><strong>Weather App</strong>
+                 </a>
+
+                 <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="navcol"> 
+                     <span class="sr-only">Toggle navigation</span>
+                     <span class="icon-bar"></span>
+                     <span class="icon-bar"></span>
+                     <span class="icon-bar"></span>
+
+                 </button>
+             </div>
          </div>
 
      </nav>
