--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
 
                  </button>
              </div>
+             <div class="collapse" navbar-collapse" id="navcol">
+                 <ul class="nav navbar-nav navbar-right">
+                   <li><a href="current.html">Current</a></li>
+                 </ul>
+
+             </div>
          </div>
 
      </nav>
