--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
              <div class="collapse" navbar-collapse" id="navcol">
                  <ul class="nav navbar-nav navbar-right">
                    <li><a href="current.html">Current</a></li>
+                   <li><a href="forecast.html">Forecast</a></li>
                  </ul>
 
              </div>
