--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
             <!-- Latest compiled JavaScript -->
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
                     </script>
+                    <link rel="stylesheet" href="style.css">
     </head>
     <body>
-     <nav class ="navbar navbar-default">
+     <nav class ="navbar navbar-default" id="nav_bar">
          <div class="container">
              <div class="navbar-header">
-                 <a href="" class ="navbar-brand navbar-link">
+                 <a href="#" class ="navbar-brand navbar-link weather">
                      <img src="" alt=""><strong>Weather App</strong>
                  </a>
 
@@ -31,10 +32,11 @@
 
                  </button>
              </div>
-             <div class="collapse" navbar-collapse" id="navcol">
+             <div class="collapse navbar-collapse" id="navcol">
                  <ul class="nav navbar-nav navbar-right">
                    <li><a href="current.html">Current</a></li>
                    <li><a href="forecast.html">Forecast</a></li>
+                   <li><a href="">Open Weather Map</a></li>
                  </ul>
 
              </div>
